# gift_ideas_final

./: README.md  app.py  pyproject.toml  schema.sql  seed_data.sql
helpers/: database_persistence.py  utils.py
static/javascripts/: application.js
static/stylesheets/: application.css
templates/: add_person.html  edit_gifts.html  edit_name.html  edit_person.html  home.html  layout.html  login.html  name.html  register.html  search.html
