[project]
name = "gift-ideas-final"
version = "0.1.0"
description = ""
authors = [
    {name = "c-lamar-fullmer",email = "colton.lamar.fullmer@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
